# gr-baz

./: AUTHORS  BazSubProj.cmake  CMakeLists-3.7.txt  CMakeLists-3.8.txt  CMakeLists.txt  MANIFEST.md  Makefile.am  Makefile.common  README  config.h.in  configure.ac  gr_baz_attach.py
apps/: CMakeLists.txt  Makefile.am  am_fft.py  borip-RTL.grc  borip-USRP-Legacy.grc  borip-USRP-UHD.grc  borip_RTL.py  borip_RTL2.py  borip_block-RTL.grc  borip_server.py  borip_usrp_legacy.py  borip_usrp_uhd.py  gpsdo.py  papr.py  pps_diff.py  realtime_fft.py  subenv  usrp_fac.py
cmake/Modules/: FindArmadillo.cmake  FindGruel.cmake  bazConfig.cmake
config/: gr_standalone.m4
docs/: CMakeLists.txt  README.baz
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: Audio FMCW.grc
grc/: Block.py.diff  CMakeLists.txt  Makefile.am  Port.py.diff  baudline.block.yml  baudline.xml  baz.tree.yml  baz_acars_decoder.xml  baz_acars_printer.xml  baz_additive_scrambler_bb.xml  baz_agc_xx.xml  baz_any.xml  baz_any_code.xml  baz_any_code_post_eval.xml  baz_any_message.xml  baz_any_single.xml  baz_any_single_sink.xml  baz_any_single_source.xml  baz_any_sink.xml  baz_any_source.xml  baz_auto_fec.xml  baz_block_status.xml  baz_block_tree.xml  baz_borip_sink.xml  baz_borip_source.xml  baz_burst_tagger.xml  baz_burster.xml  baz_delay.xml  baz_depuncture_ff.xml  baz_dpll.xml  baz_fastrak_decoder.xml  baz_file_source.xml  baz_fractional_resampler_xx.xml  baz_gate.xml  baz_message_callback.xml  baz_message_relay.xml  baz_message_server.xml  baz_multi_channel_decoder.xml  baz_music_doa.xml  baz_non_blocker.xml  (+31 more)
lib/: CMakeLists.txt  Makefile.am  api.h  baz_acars_decoder.cc  baz_acars_decoder.h  baz_additive_scrambler_bb.cc  baz_additive_scrambler_bb.h  baz_agc_cc.cc  baz_agc_cc.h  baz_auto_ber_bf.cc  baz_auto_ber_bf.h  baz_block_status.cc  baz_block_status.h  baz_burst_buffer.cc  baz_burst_buffer.h  baz_burst_tagger.h  baz_burst_tagger_impl.cc  baz_burst_tagger_impl.h  baz_burster.cc  baz_burster.h  baz_burster_config.h  baz_colouriser.cc  baz_colouriser.h  baz_colouriser_gradient.h  baz_correlator.cc  baz_correlator.h  baz_delay.cc  baz_delay.h  baz_depuncture_ff.cc  baz_depuncture_ff.h  baz_dpll_bb.cc  baz_dpll_bb.h  baz_fastrak_decoder.cc  baz_fastrak_decoder.h  baz_field_tracker.cc  baz_field_tracker.h  baz_file_source.cc  baz_file_source.h  baz_fractional_resampler_cc.cc  baz_fractional_resampler_cc.h  (+85 more)
msvc/librtl2832++/: RTL2832.rc  RTL2832.sln  RTL2832.vcproj  ReadMe.txt  StdAfx.h  librtl2832.cpp  librtl2832.h  resource.h  stdafx.cpp
patch/gnuradio-3.3git-740-ge2222445/: Xpsk-differential_encoding.diff  baz_grc_any_blocks.diff  blks2_dxpsk_demod-corrected.diff  constsink-variable_symbol_rate.diff  cpm-Numeric.diff  gnuradio-3.3git-740-ge2222445.diff  gr_clock_recovery_mm_xx-error_out.diff  gr_decode_ccsds_27_fb-viterbi.diff  gr_mpsk_receiver_cc-debug.diff  gr_udp_source-borip.diff  gr_vector_source_X-set.diff  gr_wavfile-auxi.diff  rational_resampler-variable.diff
patch/gnuradio-3.4.1-13-gcb23b7a2/: am_demod-gain.diff  gnuradio-3.4.1-13-gcb23b7a2.diff  gr_agc_cc-nan.diff  gr_udp_source-borip.diff  rational_resampler-variable.diff  usrp-init.diff
patch/op25/: README.txt  r219.des-ofb.diff  r307.diff  sitecustomize.py
python/: CMakeLists.txt  Makefile.am  __init__.py  acars_printer.py  auto_fec.py  baudline.py  baz_op25.py  borip.py  borip_server.py  colours.py  control_loop_calc.py  correlator.py  delayed_start.py  doa_compass_control.py  doa_compass_plotter.py  eye.py  facsink.py  fec_sync.py  freq_hopper.py  gen_char_to_float_lut.py  gen_char_to_short.py  horizons_block.py  introspective_xmlrpc_server.py  message_callback.py  message_relay.py  message_server.py  missile_launcher.py  multi_channel_decoder.py  music_doa_helper.py  op25.py  op25_traffic_pane.py  parallel_scanner_fsm.py  plot_sink.py  plot_window.py  qa_howto.py  radar_server.py  rate_synchroniser.py  rx_time.py  static_text.py  std_flusher.py  (+8 more)
python/usrpm/: usrp_dbid.py
samples/: OP25.grc  RTL-FM.grc
samples/tutorial/part-01/: 2 - Delay test (Sine wave source).grc  3 - baz_any test (Random source to print_char with varying threshold).grc  4 - Audio noise (Random source).grc  5- Histo sink test (GLFSR source).grc  grc_to_37.sh  kai.grcxx
samples/tutorial/part-02/: 1 - Hysteresis.grc  2- BER test (GLFSR source, biased random bit flips).grc
samples/tutorial/part-03/: UDP Source+FAC test.grc
samples/tutorial/part-04/: FAC test (Random source).grc
samples/tutorial/part-05/: FFT Bin Phase Test.grc
swig/: CMakeLists.txt  Makefile.am  Makefile.swig.gen  baz.i  baz_delay.i  baz_swig.i
